# xdg-desktop-portal

./: goblint.toml  meson.build
.github/workflows/: Containerfile  build-and-test.yml  container.yml
data/: org.freedesktop.impl.portal.ScreenCast.xml  org.freedesktop.portal.ScreenCast.xml
doc/: architecture.rst  meson.build  pipewire.rst
pipewire/: meson.build
pipewire/pw-module/: meson.build  module-portal.c
pipewire/wp-plugin/: meson.build  xdp-wp-permission-manager.c
src/: screen-cast.c  xdg-desktop-portal.c
tests/: conftest.py  test_camera.py
